--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/rayveid/fullstack-javascript-project-4#readme",
   "dependencies": {
+    "axios": "^1.2.5",
     "commander": "^9.4.1",
     "jest": "^29.4.1",
     "js-yaml": "^4.1.0",
@@ -29,9 +30,10 @@
   "devDependencies": {
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-fp": "^2.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-jest": "^27.1.5",
+    "nock": "^13.3.0",
     "prettier": "2.7.1"
   }
 }
