--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/rayveid/fullstack-javascript-project-4#readme",
   "dependencies": {
     "axios": "^1.2.5",
+    "cheerio": "^1.0.0-rc.12",
     "commander": "^9.4.1",
     "jest": "^29.4.1",
     "js-yaml": "^4.1.0",
